--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <header>
         <h1>Meu site</h1>
         <nav>
-            <a href="index.html">Sobre mim</a>
+            <a href="index.html">Sobre livros</a>
         </nav>
     <header>
     <div classe="apresentação">
-        <h1>Olá! Eu sou Julia</h2>
-        <p>Eu tiro fotos</p>
+        <h1>Olá! Eu sou Marcela</h2>
+        <p>O tema do meu portifolio é sobre livros de romance</p>
     </div>
 </body>
 </html>
