--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
-            srcset="">
         <p class="lead">Eu sou Marcela_</p>
         <h1>Sou estudande e estou no 2° ano do ensino médio </h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p>Este site é sobre livros de romance e comédias romanticas</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -28,12 +24,12 @@
         </div>
     </header>
     <main class="container mt-5">
-        <h2>Meus projetos</h2>
+        <h2>Minhas escolhas de livros para o site</h2>
         <div class="row">
-            <!-- Projeto 1 -->
+            <!-- Livro 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="imagens/813Xz4-o-gL._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="imagens/81PYZBeaNfL._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
