--- a/index.html
+++ b/index.html
@@ -94,3 +94,19 @@
                 </div>
             </div>
              
+            <!-- Livro 5 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/91Qgu5xqk7L.jpg" class="card-img-top" alt="Imagem do livro">
+                    <div class="card-body">
+                        <h5 class="card-title">Fazendo meu filme lado B
+                        </h5>
+                        <p class="card-text">O livro conta a perspectiva do Leo sobre os eventos do primeiro livro da série, "Fazendo Meu Filme a estreia de Fani". 
+                            A trama explora o ponto de vista do Leo, revelando seus pensamentos, motivações e as razões por trás de suas ações, especialmente 
+                            em relação à Fani e Vanessa em particular.
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o livro</button>
+                    </div>
+                </div>
+            </div>
