--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <h5 class="card-title">Fazendo meu filme 1 a estreia de Fani</h5>
                         <p class="card-text"> A história acompanha a rotina de Fani, uma adolescente de 16 anos apaixonada por cinema que vive em Belo Horizonte.
                              Fani, uma menina comum, enfrenta as dificuldades da adolescência, como amizades, amor, família e estudos, enquanto sonha em ser 
-                             cineasta. A trama gira em torno da possibilidade de Fani fazer um intercâmbio em Londres, o que a coloca diante da decisão de deixar a 
-                             rotina e os seus amores para trás. 
+                             cineasta. A trama gira em torno da possibilidade de Fani fazer um intercâmbio em Londres, o que a coloca diante da decisão de deixar
+                              a rotina e os seus amores para trás. 
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o livro</button>
@@ -110,3 +110,56 @@
                     </div>
                 </div>
             </div>
+
+              <!-- Livro 6 -->
+              <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/81iUrbors9L.jpg" class="card-img-top" alt="Imagem do livro">
+                    <div class="card-body">
+                        <h5 class="card-title">Amor, teoricamente
+                        </h5>
+                        <p class="card-text">Elsie Hannaway, uma física teórica que passa a vida a construir diferentes versões de si, encontra-se envolvida
+                             num namoro falso para ajudar um amigo. Este namoro falso acaba por ter consequências inesperadas quando se cruza com o atraente e 
+                             irritante Jack Smith, irmão do seu amigo, que é também um importante físico experimental. 
+
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o livro</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Livro 7 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/616U6mSP3lL.jpg" class="card-img-top" alt="Imagem do livro">
+                    <div class="card-body">
+                        <h5 class="card-title">Imperfeitos
+                        </h5>
+                        <p class="card-text">Conta a história de Olive e Ethan, um casal que se vê inesperadamente 
+                            em uma lua de mel paradisíaca, mas com uma série de problemas e situações cômicas. 
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o livro</button>
+                    </div>
+                </div>
+            </div>
+
+             <!-- Livro 8 -->
+             <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/A1OPtWMEg9L._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="Imagem do livro">
+                    <div class="card-body">
+                        <h5 class="card-title">Diário de uma paixão
+                        </h5>
+                        <p class="card-text">Noah Calhoun e a Allie se apaixonam desesperadamente, 
+                            mas os pais da jovem não aprovam o namoro. Noah é enviado para lutar na Segunda Guerra Mundial, e parece ser o fim do romance. 
+                            Enquanto isso, Allie se envolve com outro homem. No entanto, a paixão deles ainda não acabou quando Noah retorna para a pequena 
+                            cidade anos mais tarde, próximo ao casamento de Allie. 
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o livro</button>
+                    </div>
+                </div>
+            </div>
+
