--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="card">
                     <img src="imagens/91jor6JccSL._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="Imagem do livro">
                     <div class="card-body">
-                        <h5 class="card-title">Fazendo meu filme 4 Fani em busco do final feliz
+                        <h5 class="card-title">Fazendo meu filme 4 Fani em busca do final feliz
                         </h5>
                         <p class="card-text">Fani e Leo, após uma separação, precisam seguir caminhos diferentes. No entanto, o passado e as promessas de 
                             amor continuam a afetar seus corações. Um encontro pode ser a chave para eles entenderem o que aconteceu e se libertarem, 
