--- a/index.html
+++ b/index.html
@@ -163,3 +163,19 @@
                 </div>
             </div>
 
+             <!-- Livro 9 -->
+             <div class="col-md-4">
+                <div class="card">
+                    <img src="imagens/81LTEfXYgcL.jpg" class="card-img-top" alt="Imagem do livro">
+                    <div class="card-body">
+                        <h5 class="card-title">A hipótese do amor
+                        </h5>
+                        <p class="card-text"> É um romance contemporâneo que acompanha Olive Smith, uma estudante de pós-graduação em Biologia, que finge 
+                            namorar o professor Adam Carlsen para impressionar sua amiga e resolver seus problemas familiares. Ao longo da história, eles 
+                            descobrem que o falso namoro se transforma em algo mais, desafiando as teorias e preconceitos de ambos sobre o amor</p> 
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o livro</button>
+                    </div>
+                </div>
+            </div>
