--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <p class="lead">Eu sou Marcela_</p>
+        <p class="lead">Eu sou a Marcela</p>
         <h1>Sou estudande e estou no 2° ano do ensino médio </h1>
         <p>Este site é sobre livros de romance e comédias romanticas</p>
         <p>Minhas habilidades</p>
